@@ -27,6 +27,7 @@ moc_*
 rc.syd
 tests/sycapture
 tests/syd
+tests/sygpiotest
 tests/synodetest
 tests/syplay
 tests/sytone
